@@ -1,12 +1,11 @@
 package mods.railcraft.world.inventory;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 import mods.railcraft.gui.widget.FluidGaugeWidget;
 import mods.railcraft.gui.widget.WaterCollectionGaugeWidget;
-import mods.railcraft.world.level.block.entity.module.TankModule;
-import mods.railcraft.world.level.block.entity.module.WaterCollectionModule;
-import mods.railcraft.world.level.block.entity.multiblock.TankBlockEntity;
+import mods.railcraft.world.level.block.entity.tank.TankBlockEntity;
+import mods.railcraft.world.module.TankModule;
+import mods.railcraft.world.module.WaterCollectionModule;
 import net.minecraft.world.entity.player.Inventory;
 
 public class TankMenu extends RailcraftMenu {
@@ -35,7 +34,7 @@ public class TankMenu extends RailcraftMenu {
     var modules = blockEntity.getMembers().stream()
         .flatMap(Collection::stream)
         .flatMap(member -> member.getModule(WaterCollectionModule.class).stream())
-        .collect(Collectors.toList());
+        .toList();
     return modules.isEmpty()
         ? new FluidGaugeWidget(tank, x, y, u, v, w, h)
         : new WaterCollectionGaugeWidget(modules, tank, x, y, u, v, w, h);
